# ChangeLog for x11-misc/ifpgui
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/ifpgui/Attic/ChangeLog,v 1.5 2008/07/28 21:43:39 carlo Exp $

  28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> ifpgui-0.10.8.ebuild:
  QA: Get rid of deprecated qt_min_version().

  07 Dec 2007; Santiago M. Mola <coldwind@gentoo.org> files/ifpgui.desktop,
  ifpgui-0.10.8.ebuild:
  .desktop file fixed to be standard compliant.

  12 Jan 2007; Krzysiek Pawlik <nelchael@gentoo.org> ifpgui-0.10.8.ebuild:
  Fix bug #109482 (ebuild ... config).

  28 Nov 2006; Przemysław Maciąg <troll@gentoo.org> ifpgui-0.10.8.ebuild:
  Replaced ebuild config with emerge --config

*ifpgui-0.10.8 (12 Nov 2006)

  12 Nov 2006; Przemysław Maciąg <troll@gentoo.org> +files/ifpgui.desktop,
  +files/ifpgui.png, +files/ifpgui-doxyfile_fixes.patch,
  +files/ifpgui-translation_files_directory.patch,
  +files/ifpgui-use_system_libifp.patch, +ifpgui-0.10.8.ebuild:
  Initial import (closing #118115)
