@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/ifpgui
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/ifpgui/Attic/ChangeLog,v 1.5 2008/07/28 21:43:39 carlo Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/ifpgui/Attic/ChangeLog,v 1.6 2009/05/17 13:25:38 nelchael Exp $
+
+  17 May 2009; Krzysiek Pawlik <nelchael@gentoo.org> ifpgui-0.10.8.ebuild:
+  Update dependency on libusb.
 
   28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> ifpgui-0.10.8.ebuild:
   QA: Get rid of deprecated qt_min_version().
